Update RoomsDAO.java